--- a/index.css
+++ b/index.css
@@ -46,3 +46,17 @@ body {
     border-radius: 50%;
     border: none;
 }
+
+.menu-item-name {
+    font-size: 28px;
+}
+
+.menu-item-ingredients {
+    font-size: 16px;
+    color: #8B8B8B;
+    margin: 0 0 10px;
+}
+
+.menu-item-price {
+    font-size: 20px;
+}
