--- a/index.css
+++ b/index.css
@@ -44,7 +44,8 @@ body {
     height: 30px;
     width: 30px;
     border-radius: 50%;
-    border: none;
+    border: 1.5px solid #DEDEDE;
+    background: none;
 }
 
 .menu-item-name {
@@ -71,6 +72,7 @@ body {
 #checkout, .order-item {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     width: 508px;
 }
 
@@ -88,10 +90,9 @@ button {
     cursor: pointer;
 }
 
-.remove-item-button {
+.remove-item-btn {
     background: none;
     border: none;
-    text-decoration: underline;
     font-family: verdana, sans-serif;
     font-size: 12px;
     color: #BBBBBB;
@@ -105,7 +106,16 @@ button {
     border-bottom: 1px #D2D2D2 solid;
 }
 
-#checkout-button {
+
+#checkout span {
+    font-size: 28px;
+}
+
+#checkout #total-price {
+    font-size: 20px;
+}
+
+#checkout-btn {
     margin-top: 50px;
     color: #FFFFFF;
     background-color: #16DB99;
