--- a/index.css
+++ b/index.css
@@ -64,7 +64,7 @@ body {
 
 #your-order {
     height: 319px;
-    display: flex;
+    display: none;
     flex-direction: column;
     align-items: center;
 }
