--- a/index.css
+++ b/index.css
@@ -1,7 +1,10 @@
 body {
-    margin: 0;
+    margin: 0 auto;
     width: 600px;
     font-family: Smythe, sans-serif;
+    border: 1px #8B8B8B solid;
+    position: relative;
+    box-sizing: border-box;
 }
 
 #header {
@@ -133,9 +136,10 @@ button {
     border: 1px solid #757575;
     border-radius: 4px;
     box-shadow: 5px 5px 255px 0 #00000080;
-    position: fixed;
-    top: 200px;
-    left: 25px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     background: #FFFFFF;
 }
 
@@ -144,7 +148,7 @@ button {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 450px;
+    height: 550px;
     width: 550px;
     margin: 0 auto;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
