--- a/index.css
+++ b/index.css
@@ -1,6 +1,7 @@
 body {
     margin: 0 auto;
     width: 600px;
+    height: 1000px;
     font-family: Smythe, sans-serif;
     border: 1px #8B8B8B solid;
     position: relative;
@@ -174,4 +175,16 @@ button {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-weight: 700;
     font-size: 20px;
+}
+
+#thank-you-message {
+    width: 504px;
+    height: 120px;
+    margin: 50px auto;
+    display: none;
+    align-items: center;
+    text-align: center;
+    background-color: #ECFDF5;
+    color: #065F46;
+    font-size: 32px;
 }
